<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ro.pub.cs.systems.eim.practicaltest01var08.PracticalTest01Var08MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/navigate_button"
        android:layout_gravity="right"
        android:text="@string/navigate"/>

    <EditText
        android:id="@+id/textConcat"
        android:layout_width="wrap_content"
        android:editable="true"
        android:layout_weight="1"
        android:hint="1+2+3+4+5"
        android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/leftT_button"
            android:text="@string/topLeftBut"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/rightT_button"
            android:text="@string/topRightBut"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/centerB"
            android:text="@string/centerBut"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bottomL"
            android:text="@string/BotLeftBut"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/bottomR"
            android:text="@string/BotRightBut"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />


    </LinearLayout>



</LinearLayout>
